--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,34 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.administrator.foregroundservicetest">
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /><!-- 可选 -->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <application
-        android:allowBackup="true"
         android:name=".App"
+        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ServiceActivity"
-            android:launchMode="singleTop"
-            >
+        <activity
+            android:name=".PushSettingActivity"
+            android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PushSettingActivity" />
 
-        <service android:name=".RunningService" />
+        <activity
+            android:name=".ServiceActivity"
+            android:launchMode="singleTask" />
+
+        <service android:name=".service.RunningService" />
 
         <!-- Since JCore2.0.0 Required SDK核心功能-->
         <!-- 可配置android:process参数将Service放在其他进程中；android:enabled属性不能是false -->
         <!-- 这个是自定义Service，要继承极光JCommonService，可以在更多手机平台上使得推送通道保持的更稳定 -->
-        <service android:name=".jpush.JCommonServiceImpl"
+        <service
+            android:name=".jpush.JCommonServiceImpl"
             android:enabled="true"
             android:exported="false"
             android:process=":pushcore">
@@ -44,7 +49,7 @@
         <receiver
             android:name=".jpush.JPushMessageReceiverImpl"
             android:enabled="true"
-            android:exported="false" >
+            android:exported="false">
             <intent-filter>
                 <action android:name="cn.jpush.android.intent.RECEIVE_MESSAGE" />
                 <category android:name="com.example.administrator.foregroundservicetest" />
